--- a/thietbianninh/html/style.css
+++ b/thietbianninh/html/style.css
@@ -743,10 +743,10 @@
  
  .footer {
      padding-top: 30px;
-     padding-bottom: 30px;
-     color: #fff;
-     background: #2e2e2e;
+     color: #000;
+     background: #FFF;
      padding-left: 20px;
+     padding-right: 20px;
  }
  
  .footer ul {
@@ -761,7 +761,7 @@
  }
  
  .footer ul>li>a {
-     color: #fff;
+     color: #000;
  }
  
  @media only screen and (min-width: 768px) {
@@ -771,8 +771,9 @@
  }
  /*option*/
  
- .main-content .col-md-9 {
-     margin-top: 20px;
+ .main-content {
+     /*margin-top: 20px;*/
+     background-color: #fff;
  }
  
  legend {
@@ -967,4 +968,716 @@
  .list_support {
      padding: 0px;
      list-style: none;
+ }
+ 
+ #header_bottom {
+     background: #ff6600;
+     display: block;
+     height: 40px;
+     width: 100%;
+ }
+ 
+ #menu_top {
+     float: left;
+     height: 30px;
+     margin: 5px 5px 5px 0;
+     width: 220px;
+ }
+ 
+ #menu_top .title_menu_top {
+     background-color: #FFFFFF;
+     border-radius: 3px;
+     text-align: center;
+ }
+ 
+ #menu_top span.cufon {
+     font-size: 15px;
+     line-height: 30px;
+     text-transform: uppercase;
+     font-weight: 600;
+ }
+ 
+ #menu_top .title_menu_top .icon_down_menu {
+     float: right;
+     margin: 5px 5px 0 0;
+ }
+ 
+ .icon.icon_down_menu {
+     background-position: -90px 0;
+     height: 20px;
+     width: 20px;
+ }
+ 
+ .icon {
+     background: url(images/icon_page.png) repeat scroll 0 0 rgba(0, 0, 0, 0);
+     display: inline-block;
+ }
+ 
+ #search_top {
+     background-color: #FFFFFF;
+     border-radius: 3px;
+     float: left;
+     height: 30px;
+     margin-left: 20px;
+     margin-top: 5px;
+     position: relative;
+     text-align: center;
+     width: 580px;
+ }
+ 
+ #search_top strong {
+     cursor: pointer;
+     line-height: 30px;
+ }
+ 
+ .search_catlist:hover strong {
+     color: #F7941D;
+ }
+ 
+ #search_top .icon_down {
+     float: right;
+     margin-top: 12px;
+ }
+ 
+ #search_top .search_catlist {
+     background: none repeat scroll 0 0 #FFFFFF;
+     float: left;
+     position: relative;
+     width: 135px;
+ }
+ 
+ #search_top .search_catlist .s_list {
+     background-color: #FFFFFF;
+     border: 1px solid #F7941D;
+     display: none;
+     margin-left: -1px;
+     padding-top: 5px;
+     position: absolute;
+     top: 30px;
+     width: 180px;
+     z-index: 999;
+ }
+ 
+ .search_catlist:hover .s_list {
+     display: block !important;
+ }
+ 
+ #search_top .search_catlist .s_list li {
+     display: block;
+     line-height: 24px;
+     padding: 5px 10px;
+     text-align: left;
+ }
+ 
+ #search_top .search_catlist .s_list li:hover {
+     background-color: #F7941D;
+     color: #FFFFFF;
+     cursor: pointer;
+ }
+ 
+ #search_text {
+     border: 0 none;
+     float: left;
+     height: 28px;
+     outline: medium none;
+     padding-left: 10px;
+     width: 475px;
+ }
+ 
+ #search_top .search_button {
+     background: none repeat scroll 0 0 #EBEBEB;
+     border: 0 none;
+     font-size: 14px;
+     font-weight: 600;
+     height: 25px;
+     line-height: 22px;
+     position: absolute;
+     right: 2px;
+     text-transform: uppercase;
+     top: 2px;
+     transition: all 0.3s ease 0s;
+     width: 85px;
+     z-index: 30;
+ }
+ 
+ #search_top .search_button:hover {
+     background: none repeat scroll 0 0 #ff6600;
+     color: #FFFFFF;
+     cursor: pointer;
+ }
+ 
+ .support_online {
+     background: none repeat scroll 0 0 #FFFFFF;
+     border-radius: 3px;
+     cursor: pointer;
+     float: right;
+     height: 30px;
+     margin-top: 5px;
+     position: relative;
+     text-align: center;
+     width: 180px;
+ }
+ 
+ .support_online .cufon {
+     font-size: 12px;
+     line-height: 30px;
+     text-transform: uppercase;
+     font-weight: 600;
+ }
+ 
+ .support_online .icon_yahoo {
+     float: left;
+ }
+ 
+ .support_online .icon_down {
+     float: right;
+     margin: 12px 5px 0 0;
+ }
+ 
+ .support_list {
+     background: none repeat scroll 0 0 #FFFFFF;
+     border: 1px solid #F7941D;
+     display: none;
+     padding: 5px;
+     position: absolute;
+     right: 0;
+     width: 630px;
+     z-index: 555;
+ }
+ 
+ .support_online:hover .support_list {
+     display: block;
+ }
+ 
+ .support_list table {
+     width: 100%;
+ }
+ 
+ .support_list table td {
+     border: 1px solid #DCDCDC;
+     padding: 10px;
+ }
+ 
+ .support_list table .table-title {
+     background: none repeat scroll 0 0 #F5F5F5;
+ }
+ 
+ .support_list table .table-title strong {
+     font-weight: bold;
+ }
+ 
+ .support_list table td span.nick {
+     display: block;
+     line-height: 24px;
+     text-align: left;
+ }
+ 
+ .support_list table td span.nick a img {
+     float: left;
+     margin-right: 5px;
+     margin-top: 5px;
+ }
+ 
+ .icon_down {
+     background: url(images/icon_down.png) no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+     height: 6px;
+     width: 8px;
+ }
+ 
+ .men_slider {
+     background-color: #fff;
+ }
+ 
+ #home_menu {
+     /*background-color: #F7A138;*/
+     border: 1px solid #CCCCCC;
+     float: left;
+     min-height: 308px;
+     width: 218px;
+     margin-top: 4px;
+ }
+ 
+ #home_menu .menuContent {
+     display: block;
+     padding: 0px;
+     position: relative;
+     list-style: none;
+ }
+ 
+ #home_menu .menuContent .r-item {
+     float: left;
+     width: 150px;
+     margin-left: 10px;
+ }
+ 
+ #home_menu .menuContent .r-item>a.r-link {
+     line-height: 30px;
+     display: block;
+     border-bottom: 1px solid #e5e5e5;
+     color: #444442;
+     font-size: 14px
+ }
+ 
+ #home_menu .menuContent .r-item>ul {
+     display: block;
+     padding: 10px 0
+ }
+ 
+ #home_menu .menuContent .r-item>ul>li {
+     line-height: 20px;
+ }
+ 
+ #home_menu .root_item {
+     border-bottom: 1px solid #CCCCCC;
+     float: left;
+     line-height: 29px;
+     width: 208px;
+     padding: 0 5px;
+     border-top: 1px solid #CCCCCC;
+     margin-top: -1px;
+ }
+ 
+ #home_menu .root_item:last-child {
+     border-bottom: 0 none;
+ }
+ 
+ #home_menu .root_item .image_thum {
+     display: inline-block;
+     float: left;
+     height: 18px;
+     margin: 5px 10px 5px 5px;
+     width: 18px;
+ }
+ 
+ #home_menu .root_item .arrow_root {
+     background: url("images/icon_menu_right.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+     display: inline-block;
+     float: right;
+     height: 7px;
+     margin-right: 5px;
+     margin-top: 11px;
+     width: 4px;
+ }
+ 
+ #home_menu .root_item:hover {
+     background-color: #ff6600;
+     border-color: #ff6600;
+ }
+ 
+ #home_menu .root_item:hover a.root {
+     color: #FFFFFF;
+ }
+ 
+ #home_menu .root_item:hover .arrow_root {
+     background-position: 0 -7px;
+ }
+ 
+ .menuContent .subMenu_box {
+     background-color: #FFFFFF;
+     border: 2px solid #ff6600;
+     display: none;
+     left: 212px;
+     padding: 5px 10px;
+     position: absolute;
+     top: -1px;
+     width: 679px;
+     z-index: 999;
+     height: 296px;
+ }
+ 
+ .menuContent .subMenu_box .col_left {
+     float: left;
+     width: 455px;
+ }
+ 
+ .menuContent .subMenu_box .col_right {
+     float: right;
+ }
+ 
+ .menuContent .subMenu_box .col_right img {
+     max-width: 225px;
+     max-height: 296px;
+ }
+ 
+ .subMenu_item {
+     float: left;
+     margin-right: 10px;
+     width: 216px;
+ }
+ 
+ .subMenu_item .subMenu_item_link {
+     color: #4D4D4F;
+     font-weight: bold;
+     font-size: 13px;
+ }
+ 
+ .subMenu_item .subMenu_item_link:hover {
+     text-decoration: underline;
+ }
+ 
+ .subMenu_item .s_last {
+     list-style-type: circle;
+ }
+ 
+ .subMenu_item .s_last li {
+     margin-left: 14px;
+ }
+ 
+ .temp_header {
+     display: none;
+ }
+ 
+ .pro_menu_title {
+     border-bottom: 5px solid #ff6600;
+     float: left;
+     height: 39px;
+     margin-top: 5px;
+     width: 100%;
+ }
+ 
+ .pro_menu_title>h2 {
+     background-color: #ff6600;
+     display: inline-block;
+     float: left;
+     font-size: 14px;
+     font-weight: 600;
+     line-height: 34px;
+     padding-left: 11px;
+     text-transform: uppercase;
+     width: 200px;
+     margin: 0px;
+ }
+ 
+ .pro_menu_title>h2 a {
+     color: #FFFFFF;
+ }
+ 
+ .icon.icon_menupro_home {
+     float: left;
+     height: 8px;
+     margin-right: 10px;
+     margin-top: 12px;
+     width: 14px;
+     background: url(images/icon-down-home.png) no-repeat transparent;
+ }
+ 
+ .pro_menu_title .pro_submenu_title {
+     background: url("images/bg-cat-home.png") no-repeat scroll left center rgba(0, 0, 0, 0);
+     display: block;
+     float: left;
+     height: 39px;
+     padding-left: 45px;
+     line-height: 34px;
+     font-size: 12px;
+ }
+ 
+ .pro_menu_title .pro_submenu_title a {
+     font-size: 12px;
+     padding: 0 15px;
+     color: #ff6600;
+     border-right: 1px solid #ff6600;
+ }
+ 
+ .pro_menu_title .pro_submenu_title a:last-child {
+     margin-right: 0 !important;
+ }
+ 
+ .pro_item .pin_gift {
+     background: url("images/gift.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+     bottom: 0;
+     display: inline-block;
+     height: 35px;
+     position: absolute;
+     right: 0;
+     width: 35px;
+ }
+ 
+ .pro_menu_title .sublst_title {
+     background-color: #fff;
+     display: none;
+     left: 0px;
+     position: absolute;
+     top: 39px;
+     width: 242px;
+     z-index: 999;
+     padding: 0px;
+     margin: 0px;
+ }
+ 
+ .pro_menu_title:hover .sublst_title {
+     display: block;
+ }
+ 
+ .pro_menu_title .sublst_title li {
+     border: 1px solid #fff;
+     display: block;
+     line-height: 30px;
+     margin-top: -1px;
+     padding-left: 10px;
+     background: #ff6600;
+ }
+ 
+ .pro_menu_title .sublst_title li:hover {
+     background-color: #fff;
+ }
+ 
+ .pro_menu_title .sublst_title a {
+     color: #fff;
+     font-size: 12px;
+     text-transform: none;
+     display: block;
+ }
+ 
+ .pro_menu_title .sublst_title a:hover {
+     color: #000;
+ }
+ 
+ .text-link:hover {
+     text-decoration: none;
+     color: #000000;
+ }
+ 
+ .pro_item {
+     border: 1px solid #CCCCCC;
+     float: left;
+     height: 220px;
+     margin-left: -1px;
+     position: relative;
+ }
+ 
+ .pro_item .pin_sale,
+ .pro_left_item .pin_sale {
+     background: url("images/icon_sale.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+     color: #FFFFFF;
+     height: 100%;
+     left: 1px;
+     padding-top: 17px;
+     position: absolute;
+     text-align: center;
+     top: 1px;
+     width: 52px;
+     z-index: 100;
+     font-weight: bold;
+     font-size: 13px;
+ }
+ 
+ .pro_item a {
+     display: block;
+     height: 220px;
+     padding-top: 10px;
+     text-align: center;
+ }
+ 
+ .pro_item .pro_image {
+     display: table-cell;
+     height: 130px;
+     position: relative;
+     text-align: center;
+     vertical-align: middle;
+     width: 188px;
+ }
+ 
+ .pro_item .pro_image img {
+     max-height: 120px;
+     max-width: 180px;
+ }
+ 
+ .pro_item .pro_name,
+ .pro_item .pro_price,
+ .pro_item .pro_marketPrice {
+     display: block;
+     line-height: 16px;
+     padding: 0 10px;
+ }
+ 
+ .pro_item .pro_name {
+     font-size: 14px;
+     height: 34px;
+     margin-bottom: 10px;
+     overflow: hidden;
+ }
+ 
+ .pro_item .pro_price {
+     color: #000;
+     font-size: 18px;
+     font-weight: bold;
+ }
+ 
+ .pro_item .pro_marketPrice {
+     color: #000000 !important;
+     font-size: 14px;
+     text-decoration: line-through;
+ }
+ 
+ .right-a {
+     padding: 0px;
+ }
+ 
+ .right-a img {
+     float: right;
+     height: 440px;
+     overflow: hidden;
+     width: 199px;
+ }
+ 
+ #footer_nav {
+     border-bottom: 1px dashed #BFBFBF;
+     border-top: 2px solid #ff6600;
+     display: block;
+     height: 29px;
+     margin-bottom: 15px;
+ }
+ 
+ #footer_nav .footer_nav_wrap {
+     margin: 0 auto;
+     text-align: center;
+ }
+ 
+ #footer_nav .footer_nav_wrap ul li {
+     background: url("images/bg_navTop.png") no-repeat scroll right center rgba(0, 0, 0, 0);
+     display: inline-block;
+     line-height: 29px;
+     padding: 0 20px;
+ }
+ 
+ .footer_info {
+     display: block;
+     padding: 10px 0;
+ }
+ 
+ .row_item {
+     float: left;
+     border: 1px solid #e1e1e1;
+ }
+ 
+ .row_item .row_item_title,
+ .row_item_newsletter .row_item_title {
+     font-size: 13px;
+     font-weight: bold;
+     text-align: center;
+     display: block;
+     margin-top: -7px;
+     margin-bottom: 10px;
+ }
+ 
+ .row_item .row_item_title>strong {
+     background: #fff;
+     padding: 3px 10px;
+ }
+ 
+ .row_item .info_link_list {
+     display: block;
+     line-height: 20px;
+     padding-left: 140px;
+     height: 120px;
+     list-style: inherit;
+     position: relative;
+ }
+ 
+ .row_item .info_link_list.giaiphap {
+     background: url(images/bongden.png) no-repeat left 10px top transparent;
+ }
+ 
+ .row_item .info_link_list.duan {
+     background: url(images/duan.png) no-repeat left 10px top transparent;
+ }
+ 
+ .row_item .info_link_list.dichvu {
+     background: url(images/dichvu.png) no-repeat left 10px top transparent;
+ }
+ 
+ .row_item .info_link_list.tintuc {
+     background: url(images/tintuc.png) no-repeat left 10px top transparent;
+ }
+ 
+ .row_item .info_link_list>li {
+     margin-top: 5px
+ }
+ 
+ .row_item .info_link_list>li>a {
+     color: #8d8d87;
+     font-size: 10px;
+     font-weight: 600;
+ }
+ 
+ .row_item .info_link_list>li.view-more {
+     text-align: right;
+     display: block;
+     padding: 0 10px 0 17px;
+     margin-top: 15px;
+     background: url(images/list-view-more.png) no-repeat left center transparent;
+     display: inline-block;
+     float: right;
+ }
+ 
+ .row_item .info_facebook {
+     display: block;
+     line-height: 16px;
+     margin-top: 20px;
+     width: 150px;
+ }
+ 
+ .row_item .info_customer {
+     display: block;
+     line-height: 16px;
+     margin-top: 20px;
+     width: 110px;
+ }
+ 
+ .row_item .info_facebook .icon_facebook,
+ .row_item .info_facebook .icon.icon_youtube,
+ .row_item .icon_google,
+ .row_item .icon.icon_customer {
+     float: left;
+     margin-right: 10px;
+ }
+ 
+ .row_item_newsletter {
+     float: right;
+     width: 358px;
+ }
+ 
+ .row_item_newsletter .footer_newsletter p {
+     line-height: 20px;
+ }
+ 
+ .row_item_newsletter .form_newsletter {
+     float: left;
+     height: 30px;
+     position: relative;
+     width: 315px;
+ }
+ 
+ #email_newsletter {
+     height: 30px;
+     padding-left: 15px;
+     width: 300px;
+ }
+ 
+ .row_item_newsletter .form_newsletter a.cufon {
+     background: none repeat scroll 0 0 #E1E1E1;
+     border-radius: 3px;
+     cursor: pointer;
+     font-size: 18px;
+     height: 25px;
+     line-height: 25px;
+     padding: 0 10px;
+     position: absolute;
+     right: 0;
+     text-transform: uppercase;
+     top: 5px;
+ }
+ 
+ .row_item_newsletter .info_bank {
+     font-size: 13px;
+     line-height: 20px;
+     margin-top: 12px;
+     padding-left: 35px;
+ }
+ 
+ .footer .footer-add {
+     background-color: #000;
+     color: #fff;
+     padding-top: 30px;
+     padding-bottom: 30px;
  }
